packages/hyperchad/template/tests/warnings/attribute-missing-value.stderr
error: unexpected end of input, expected one of: curly braces, literal, parentheses, `@`, `;`, integer literal, floating point literal, `#`, identifier
 --> tests/warnings/attribute-missing-value.rs:4:5
  |
4 | /     container! {
5 | |         div href=
6 | |     };
  | |_____^
  |
  = note: this error originates in the macro `container` (in Nightly builds, run with -Z macro-backtrace for more info)
